# wg_accept_cgi

./: Cargo.toml
.github/workflows/: build-devel.yml  build-release.yml  rust.yml
src/: main.rs
