[package]
name = "ffdd_wg_accept_cgi"
version = "1.2.2"
authors = ["nmerkelt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
qstring = "0.7"
regex = { version = "1", default-features = false, features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
