[package]
name = "ffdd_wg_accept_cgi"
version = "1.2.4"
authors = ["nmerkelt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12"
regex = { version = "1", default-features = false, features = ["std"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
